temp fix for jumpnav calc

--- a/assets/targets/components/inpage-navigation/_jumpnav.scss
+++ b/assets/targets/components/inpage-navigation/_jumpnav.scss
@@ -96,8 +96,9 @@
     }
 
     &.endpoint {
-      position: absolute;
       bottom: 545px;
+      display: none; // temp fix
+      position: absolute;
       top: auto;
     }
   }
